--- a/src/app/components/forget-password/forget-password.component.scss
+++ b/src/app/components/forget-password/forget-password.component.scss
@@ -1,5 +1,5 @@
  .p1{
-    background: url(../../../assets/pic1.jpg) center no-repeat;
+    background: url(../../../assets/img.jfif) center no-repeat;
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     margin: auto;
-    border: 2px solid black;
+    //border: 2px solid black;
     background: white;
     border-radius: 30px;
     padding: 30px;
