--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -68,7 +68,7 @@
 
 .ddd{
   //background-image: linear-gradient(to top right, blue, green);
-  background: url('../../../assets/dow.jpg') center no-repeat;
+  background: url('../../../assets/pic1.jpg') center no-repeat;
   width: 100%;
   height: 100vh;
   margin: 0;
