--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -247,13 +247,14 @@
                     </div>
                     <div class="form-group ">
                         <label for="password" id="v1" class="col-sm-2 col-form-label">Password*:</label>
-                        <input type="password" formControlName="password" maxlength="10" class="form-control" id="password"
-                            placeholder="Enter Password">
+                        <input type="password" formControlName="password" maxlength="10" class="form-control"
+                            id="password" placeholder="Enter Password">
                         <ng-container
                             *ngIf="(getRegFormControl('password').touched || getRegFormControl('password').dirty) && getRegFormControl('password').invalid">
                             <div class="error" *ngIf="getRegFormControl('password')?.errors['required']">Password is
                                 required</div>
-                            <div class="error" *ngIf="getRegFormControl('password')?.errors['minlength']">min.8 letters has
+                            <div class="error" *ngIf="getRegFormControl('password')?.errors['minlength']">min.8 letters
+                                has
                                 required
                             </div>
                         </ng-container>
@@ -267,11 +268,11 @@
                     </div>
                     <div class="form-group ">
                         <label for="userType" id="v1" class="col-sm-2 col-form-label">UserType*:</label><br>
-                            <select id="user" formControlName="userType">
-                              <option value="{{user.name}}" *ngFor="let user of userType">{{user.value}}</option>
-                            </select>
-                     </div>
-                     <div class="form-group ">
+                        <select id="user" formControlName="userType">
+                            <option value="{{user.name}}" *ngFor="let user of userType">{{user.value}}</option>
+                        </select>
+                    </div>
+                    <div class="form-group ">
                         <label for="address" id="v1" class="col-sm-2 col-form-label">Address*:</label>
                         <textarea type="text" formControlName="address" maxlength="50" class="form-control" id="address"
                             placeholder="Enter Address"></textarea>
@@ -291,8 +292,8 @@
                             <i class="bi bi-check-circle-fill"></i>
                         </span>
                     </div>
-                        </div>
-                    </div>
+                </div>
+            </div>
             <button type="submit" class="btn btn-success" [disabled]="RegForm.invalid">Save</button>
         </form>
     </div>
