--- a/src/app/stocks/stocks/stocks.component.html
+++ b/src/app/stocks/stocks/stocks.component.html
@@ -33,6 +33,10 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company Name </th>
                 <td mat-cell *matCellDef="let row"> {{row.companyName}} </td>
             </ng-container>
+            <ng-container matColumnDef="unitPrice">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>UnitPrice  </th>
+                <td mat-cell *matCellDef="let row"> {{row.unitPrice}} </td>
+            </ng-container>
             <ng-container matColumnDef="quanity">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Quanity </th>
                 <td mat-cell *matCellDef="let row"> {{row.quanity}} </td>
@@ -93,6 +97,11 @@
                 <mat-form-field  class="mat-focused">
                 <input matInput placeholder="Company Name" formControlName="companyName">
                 </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused">
+                <input matInput placeholder="Unit Price" type="number" appDigits formControlName="unitPrice" >
+                </mat-form-field> 
             </div>
             <div>
                 <mat-form-field  class="mat-focused">
